# backend-p2p-traffic

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml
.github/workflows/: deploy.yml
back/: app.py  config.py  errors.py  main.py
back/auth/: auth.py  signature.py  token.py
back/controllers/: base.py
back/controllers/balance/: __init__.py  balance.py
back/controllers/orders/: __init__.py  order.py
back/controllers/refferals/: referrals.py
back/controllers/user/: __init__.py  user.py
back/models/: VIPStatuses.py  __init__.py  ads.py  chats.py  enums.py  metrics.py  prize.py  referrals.py  reviews.py  transactions.py  user.py  users.py
back/routers/: metrics.py
back/routes/: __init__.py
back/routes/additional/: additional_requests.py
back/routes/ads/: __init__.py  ads.py
back/routes/adsgram/: __init__.py  adsgram.py
back/routes/auth/: auth.py
back/routes/balance/: __init__.py  balance.py
back/routes/metrics/: __init__.py  metrics.py
back/routes/orders/: __init__.py  order.py
back/routes/other/: __init__.py  additional_requests.py
back/routes/prize/: __init__.py  prizes.py
back/routes/referrals/: __init__.py  referrals.py
back/routes/user/: __init__.py  user.py
back/utils/: cryptobot.py
back/views/ads/: __init__.py  orders.py
back/views/auth/: __init__.py  auth.py  user.py
back/views/balance/: __init__.py  balance.py
back/views/prize/: __init__.py  prize.py
bot/: bot.py  config.py  constants.py  keyboards.py  utils.py
bot_helper/: __init__.py  bot.py  config.py  constants.py  keyboards.py  utils.py
db/: postmaster.pid
db/global/: 1260  1262  2671  pg_control  pg_internal.init
(+41 files in other folders)
