[tool.poetry]
name = "p2p-platform"
version = "0.1.1"
description = "Back p2p traffic platform"
authors = ["CodeArtistanse"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic = "2.9.2"
aiogram = "^3.15.0"
psycopg2-binary = "^2.9.8"
fastapi = "0.111.0"
uvicorn = "0.30.1"
tortoise-orm = {version = "0.21.3", extras = ["asyncpg"]}
faker = "25.9.1"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
python-dotenv = "^1.0.1"
aiohttp = "^3.9.5"
aerich = "^0.7.2"
requests = "^2.32.3"
aiocryptopay = "^0.4.7"
apscheduler = "^3.11.0"

[tool.aerich]
tortoise_orm = "back.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry>=1.3.0"]
build-backend = "poetry.core.masonry.api"
